# whisper4dart

./: .gitignore  .pubignore  README.md  config.txt  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/whisper_dart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: whisper4dart.podspec  whisper_dart.podspec
lib/: library.dart  other.dart  whisper.dart  whisper.g.dart  whisper4dart.dart  whisper4dart_bindings_generated.dart  whisper_dart.dart  whisper_dart_bindings_generated.dart
linux/: CMakeLists.txt
macos/: whisper4dart.podspec
macos/Classes/: whisper4dart.c  whisper_dart.c
src/: CMakeLists.txt
windows/: CMakeLists.txt
